methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: ')' expected but ';' found.
while (!isOverBaggle()) {while (!FacingTrail() {right()}; forward()})
                                                        ^SlugHunting:3: error: ';' expected but ')' found.
while (!isOverBaggle()) {while (!FacingTrail() {right()}; forward()})
                                                                    ^